--- a/pytorch_1.ipynb
+++ b/pytorch_1.ipynb
@@ -21,10 +21,40 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-24T11:36:28.549836Z",
+     "start_time": "2023-03-24T11:36:27.993081Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-24T11:36:29.022433Z",
+     "start_time": "2023-03-24T11:36:29.007473Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
    ]
   },
   {
@@ -1699,9 +1729,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "torch",
    "language": "python",
-   "name": "python3"
+   "name": "torch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1713,7 +1743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.16"
   },
   "toc": {
    "base_numbering": 1,
